sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (fin=true) {
           ^